--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* General Styles */
 body{
     overflow-x: hidden;
     font-family: 'Montserrat', sans-serif;
@@ -8,8 +7,6 @@ body{
     color: #333;
 }
 
-
-/* Header */
 .header {
     background-color: #2b6777;
     padding: 20px;
@@ -71,11 +68,12 @@ max-width: 100%;
 }
 
 .controls, .control {
+    font-family: 'Montserrat';
     display: block;
     width: 100%;
     padding: 10px;
     margin: 10px 0 16px 0;
-    border: 1px solid #ddd;
+    border: 2px solid #ddd;
     border-radius: 5px;
     font-size: 18px;
     box-sizing: border-box;
@@ -107,7 +105,7 @@ max-width: 100%;
     border: none;
     padding: 10px;
     color: white;
-    margin: 16px 0 0 0;
+    margin: 16px 0px 0px 0px;
     font-size: 18px;
     font-family: 'Montserrat';
     border-radius: 20px;
@@ -129,6 +127,64 @@ input.controls[type="checkbox"] {
 .form-contact p {
     display: flex;
     align-items: center; 
+}
+
+#thankYouMessage {
+    display: none; 
+    background-color: #6224de9a; 
+    border-radius: 10px;
+    padding: 0px 0px 46px 0px;
+    margin-top: 40px;
+    color: #ffffff; 
+    font-weight: bold; 
+    font-size: 1.2em; 
+    text-align: center; 
+    animation: fadeIn 0.5s ease; 
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0; 
+        transform: translateY(-10px); 
+    }
+    to {
+        opacity: 1; 
+        transform: translateY(0); 
+    }
+}
+
+
+.fade-out {
+    animation: fadeOut 0.5s ease forwards; 
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1; 
+    }
+    to {
+        opacity: 0; 
+    }
+}
+
+#errorMessage {
+    font-size: 13px;
+    display: none; 
+    color: red;
+    font-weight: bold;
+    margin-top: 24px; 
+}
+
+@keyframes shake {
+    0% { transform: translate(1px, 0); }
+    25% { transform: translate(-1px, 0); }
+    50% { transform: translate(1px, 0); }
+    75% { transform: translate(-1px, 0); }
+    100% { transform: translate(0, 0); }
+}
+
+.shake {
+    animation: shake 0.5s ease forwards;
 }
 
 /* What We Offer Section */
@@ -341,6 +397,7 @@ input.controls[type="checkbox"] {
     height: auto;
     opacity: 1;
     transform: translate(-50%, -50%) scale(1); 
+    animation: popupFadeIn 0.6s ease-out forwards;
 }
 
 .popup h2 {
@@ -544,5 +601,5 @@ input.controls[type="checkbox"] {
 
     .footer {
         padding: 20px;
-    }
+}
 }
