--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* General Styles */
 body{
     overflow-x: hidden;
     font-family: 'Montserrat', sans-serif;
@@ -7,6 +8,8 @@ body{
     color: #333;
 }
 
+
+/* Header */
 .header {
     background-color: #2b6777;
     padding: 20px;
@@ -111,6 +114,46 @@ max-width: 100%;
     border-radius: 20px;
 }
 
+.resolucion {
+    width: 99%;
+    text-align: center;
+}
+
+
+/**Movil**/
+
+@media (max-width: 767px) {
+    .desktop {
+        display: none;
+    }
+    .tablet {
+        display: none;
+    }
+}
+
+
+/**Tablet**/
+
+@media (min-width: 768px) and (max-width: 990px) {
+    .desktop {
+        display: none;
+    }
+    .movil {
+        display: none;
+    }
+}
+
+/**Escritorio**/
+
+@media (min-width: 991px) {
+    .tablet {
+        display: none;
+    }
+    .movil {
+        display: none;
+    }
+}
+
 .button:hover{
     background-color: #6224de93;
     cursor: pointer;
@@ -130,51 +173,53 @@ input.controls[type="checkbox"] {
 }
 
 #thankYouMessage {
-    display: none; 
-    background-color: #6224de9a; 
-    border-radius: 10px;
+    display: none; /* Ocultado por defecto */
+    background-color: #6224de9a; /* Color de fondo verde claro */
+    border-radius: 10px; /* Bordes redondeados */
     padding: 0px 0px 46px 0px;
     margin-top: 40px;
-    color: #ffffff; 
-    font-weight: bold; 
-    font-size: 1.2em; 
-    text-align: center; 
-    animation: fadeIn 0.5s ease; 
+    color: #ffffff; /* Color del texto */
+    font-weight: bold; /* Negrita */
+    font-size: 1.2em; /* Tamaño de fuente más grande */
+    text-align: center; /* Centrar texto */
+    animation: fadeIn 0.5s ease; /* Animación al aparecer */
 }
 
+/* Animación de desvanecimiento */
 @keyframes fadeIn {
     from {
-        opacity: 0; 
-        transform: translateY(-10px); 
+        opacity: 0; /* Comienza invisible */
+        transform: translateY(-10px); /* Desplazamiento hacia arriba */
     }
     to {
-        opacity: 1; 
-        transform: translateY(0); 
+        opacity: 1; /* Termina visible */
+        transform: translateY(0); /* Sin desplazamiento */
     }
 }
 
-
+/* Animación de desvanecimiento al ocultar */
 .fade-out {
-    animation: fadeOut 0.5s ease forwards; 
+    animation: fadeOut 0.5s ease forwards; /* Animación al desaparecer */
 }
 
 @keyframes fadeOut {
     from {
-        opacity: 1; 
+        opacity: 1; /* Comienza visible */
     }
     to {
-        opacity: 0; 
+        opacity: 0; /* Termina invisible */
     }
 }
 
 #errorMessage {
     font-size: 13px;
-    display: none; 
-    color: red;
-    font-weight: bold;
-    margin-top: 24px; 
+    display: none; /* Ocultado por defecto */
+    color: red; /* Color rojo para el error */
+    font-weight: bold; /* Negrita */
+    margin-top: 24px; /* Espacio arriba */
 }
 
+/* Animación de temblor */
 @keyframes shake {
     0% { transform: translate(1px, 0); }
     25% { transform: translate(-1px, 0); }
